--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
 
 <div class="ui stackable grid container">
   <div class="six wide column">
-    here will be sidebar
+    <app-sidebar></app-sidebar>
   </div>
 
   <div class="ui main text container ten wide column">
