--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,6 @@
   </div>
 
   <div class="ui main text container ten wide column">
-    here will be routing
+    <router-outlet></router-outlet>
   </div>
 </div>
