--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,6 +1,6 @@
 <div class="intro">
   <p>
-  This project shows examples of Forms in Angular
+  This project shows examples of Forms in Angular.
   Click on the menu on the left to try out each example!
   </p>
 
