--- a/src/app/sidebar/item/item.component.html
+++ b/src/app/sidebar/item/item.component.html
@@ -1,3 +1,7 @@
-<a class="item" [routerLink]="item.path">
+<a
+		class="item"
+		[ngClass]="{ active: isActive() }"
+		[routerLink]="item.path"
+>
 	{{ item.label }}
 </a>
