completed sku with builder component

--- a/src/app/examples/demo-form-sku-with-builder/demo-form-sku-with-builder.component.html
+++ b/src/app/examples/demo-form-sku-with-builder/demo-form-sku-with-builder.component.html
@@ -1,3 +1,20 @@
-<p>
-  demo-form-sku-with-builder works!
-</p>
+<div class="ui raised segment">
+	<h2 class="ui header">Demo Form: Sku with Builder</h2>
+	<form
+			class="ui form"
+			[formGroup]="myForm"
+			(ngSubmit)="onSubmit(myForm.value)"
+	>
+		<div class="field">
+			<label for="skuInput">SKU</label>
+			<input
+					type="text"
+					id="skuInput"
+					placeholder="SKU"
+					[formControl]="myForm.controls['sku']"
+			/>
+		</div>
+
+		<button type="submit" class="ui button">Submit</button>
+	</form>
+</div>
