--- a/src/app/examples/demo-form-with-validations-shorthand/demo-form-with-validations-shorthand.component.html
+++ b/src/app/examples/demo-form-with-validations-shorthand/demo-form-with-validations-shorthand.component.html
@@ -1,3 +1,43 @@
-<p>
-  demo-form-with-validations-shorthand works!
-</p>
+<div class="ui raised segment">
+	<h2 class="ui header">Demo Form: with validations (explicit)</h2>
+	<form
+			class="ui form"
+			[formGroup]="myForm"
+			(ngSubmit)="onSubmit(myForm.value)"
+			[class.error]="!myForm.valid && myForm.touched"
+	>
+		<div
+				class=field
+				[class.error]="!myForm.controls['sku'].valid && myForm.controls['sku'].touched"
+		>
+			<label for="skuInput">SKU</label>
+			<input
+					type="text"
+					id="skuInput"
+					placeholder="SKU"
+					[formControl]="myForm.controls['sku']"
+			/>
+			<div
+					*ngIf="!myForm.controls['sku'].valid"
+					class="ui error message"
+			>
+				SKU is invalid
+			</div>
+			<div
+					*ngIf="myForm.controls['sku'].hasError('required')"
+					class="ui error message"
+			>
+				SKU is required
+			</div>
+		</div>
+
+		<div
+				*ngIf="!myForm.valid"
+				class="ui error message"
+		>
+			Form is invalid
+		</div>
+
+		<button type="submit" class="ui button">Submit</button>
+	</form>
+</div>
