completed form control example

--- a/src/app/examples/demo-form-control/demo-form-control.component.html
+++ b/src/app/examples/demo-form-control/demo-form-control.component.html
@@ -1,5 +1,2 @@
-<p>
-  demo-form-control works!
-</p>
-
-<input type="text" />
+<input type="text" [formControl]="control" />
+<button (click)="onSubmit()">submit</button>
